refactor: some cleanup work on beams