@@ -49,90 +49,29 @@ public class MinekeaItemGroups {
 
     static {
         BEAMS = FabricItemGroup.builder()
-            .icon(() -> new ItemStack(Beams.BLOCKS.get(0)))
+            .icon(() -> new ItemStack((Block) Beams.BLOCKS.getFirst()))
             .displayName(Text.translatable("item_group.minekea.blocks.building.beams"))
             .build();
 
         COMPRESSED_BLOCKS = FabricItemGroup.builder()
-            .icon(() -> new ItemStack(CompressedBlocks.BLOCKS.get(0)))
+            .icon(() -> new ItemStack(CompressedBlocks.BLOCKS.getFirst()))
             .displayName(Text.translatable("item_group.minekea.blocks.building.compressed"))
             .build();
 
         DYED_BLOCKS = FabricItemGroup.builder()
-            .icon(() -> new ItemStack((Block) DyedBlocks.BLOCKS.get(0)))
+            .icon(() -> new ItemStack((Block) DyedBlocks.BLOCKS.getFirst()))
             .displayName(Text.translatable("item_group.minekea.blocks.building.dyed"))
             .build();
 
         COVERS = FabricItemGroup.builder()
-            .icon(() -> new ItemStack(Covers.BLOCKS.get(0)))
+            .icon(() -> new ItemStack(Covers.BLOCKS.getFirst()))
             .displayName(Text.translatable("item_group.minekea.blocks.building.covers"))
             .build();
 
         FURNITURE = FabricItemGroup.builder()
-            .icon(MinekeaItemGroups::getFurnitureIcon)
+            .icon(() -> new ItemStack(DisplayCases.DISPLAY_CASES.getFirst()))
             .displayName(Text.translatable("item_group.minekea.blocks.furniture"))
             .build();
-    }
-
-//    protected static boolean isFurnitureEnabled() {
-//        MinekeaConfig config = ConfigManager.getConfig();
-//
-//        return config.enableBookshelves
-//            || config.enableStorageBookshelves
-//            || config.enableDisplayCases
-//            || config.enableDoors
-//            || config.enablePillows
-//            || config.enableChairs
-//            || config.enableStools
-//            || config.enableShelves
-//            || config.enableTables
-//            || config.enableTrapdoors;
-//    }
-
-    protected static ItemStack getFurnitureIcon() {
-//        MinekeaConfig config = ConfigManager.getConfig();
-//
-//        if (config.enableChairs) {
-//            return new ItemStack(Seats.CHAIRS.get("acacia"));
-//        }
-//
-//        if (config.enableStools) {
-//            return new ItemStack(Seats.STOOLS.get("acacia"));
-//        }
-//
-//        if (config.enableTables) {
-//            return new ItemStack(Tables.TABLES.get("acacia"));
-//        }
-//
-//        if (config.enableShelves) {
-//            return new ItemStack(Shelves.SHELVES.get("acacia"));
-//        }
-//
-//        if (config.enableDisplayCases) {
-        return new ItemStack(DisplayCases.DISPLAY_CASES.getFirst());
-//        }
-//
-//        if (config.enableBookshelves) {
-//            return new ItemStack(Bookshelves.BOOKSHELVES.get("acacia"));
-//        }
-//
-//        if (config.enableStorageBookshelves) {
-//            return new ItemStack(StorageBookshelves.STORAGE_BOOKSHELVES.get("acacia"));
-//        }
-//
-//        if (config.enablePillows) {
-//            return new ItemStack(Pillows.GREEN_PILLOW);
-//        }
-//
-//        if (config.enableDoors) {
-//            return new ItemStack(Doors.BOOKSHELF_DOORS.get("acacia"));
-//        }
-//
-//        if (config.enableTrapdoors) {
-//            return new ItemStack(Trapdoors.BOOKSHELF_TRAPDOORS.get("acacia"));
-//        }
-//
-//        return new ItemStack(net.minecraft.item.Items.COBBLESTONE);
     }
 
     public void register() {
